fixing css for mobile use on safari

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,4 +15,5 @@
 
 html {
     scroll-behavior: smooth;
+    font-family:'Roboto';
 }
